--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
 <!--  -->
 </head>
 <body>
-    <script src="https://aj1st-files.pages.dev/header.js"></script>
+    <script src="https://aj1st.pages.dev/header.js"></script>
 <!--  -->    
          <div class="body-area">
 <div id="aj1st">
@@ -73,10 +73,10 @@ Welcome to<strong>AJ Consultants</strong>, your trusted partner in navigating op
 </section>
 <div section="links-container"></div>
 <!--  -->
-<script src="https://aj1st-files.pages.dev/gotolinks.js"></script>        
+<script src="https://aj1st.pages.dev/gotolinks.js"></script>        
 </div>
 <!--  -->
-<script src="https://aj1st-files.pages.dev/whatsapp.js"></script>
-<script src="https://aj1st-files.pages.dev/footer.js"></script> 
+<script src="https://aj1st.pages.dev/whatsapp.js"></script>
+<script src="https://aj1st.pages.dev/footer.js"></script> 
 </body>
 </html>
