--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
             }
             }   
     </style>
-<link rel="stylesheet" href="https://aj1st-files.pages.dev/glowingtitle.css">      
+<link rel="stylesheet" href="https://aj1st.pages.dev/glowingtitle.css">      
 <!--  -->
 </head>
 <body>
