--- a/Application.html
+++ b/Application.html
@@ -29,11 +29,11 @@
             }
             }          
     </style>
-<link rel="stylesheet" href="https://aj1st-files.pages.dev/glowingtitle.css">      
+<link rel="stylesheet" href="https://aj1st.pages.dev/glowingtitle.css">      
 <!--  -->
 </head>
 <body>
-    <script src="https://aj1st-files.pages.dev/header.js"></script> 
+    <script src="https://aj1st.pages.dev/header.js"></script> 
          <div class="body-area">
 <!-- Body Area (for content)**************** -->
 <div id="aj1st">
@@ -60,6 +60,6 @@
 </body>   
 <!-- 888888888888888888888888888888888888888 --> 
 <footer>
-<script src="https://aj1st-files.pages.dev/footer.js"></script>
+<script src="https://aj1st.pages.dev/footer.js"></script>
 </footer> 
 </html>
