--- a/Explore uae.html
+++ b/Explore uae.html
@@ -24,11 +24,11 @@
             padding: 30px;
             }
 </style>
-<link rel="stylesheet" href="https://aj1st-files.pages.dev/glowingtitle.css">
+<link rel="stylesheet" href="https://aj1st.pages.dev/glowingtitle.css">
 <!-- 888888888888888888888888888888888888888 -->               
 </head>
 <body>    
-<script src="https://aj1st-files.pages.dev/header.js"></script>  
+<script src="https://aj1st.pages.dev/header.js"></script>  
 <!-- Body Area (for content)**************** -->
     <div class="body-area">          
 <!--  --> 
@@ -133,7 +133,7 @@
     <a href="https://wa.me/971509880960" style="display: inline-block; padding: 10px 20px; background-color: #009500; color: #fff; font-weight: bold; border-radius: 20px; text-decoration: none; font-size: 16px;">Whatsapp</a>
 </div>
 <!-- 888888888888888888888888888888888888888 -->    
-<script src="https://aj1st-files.pages.dev/whatsapp.js"></script>
-<script src="https://aj1st-files.pages.dev/footer.js"></script> 
+<script src="https://aj1st.pages.dev/whatsapp.js"></script>
+<script src="https://aj1st.pages.dev/footer.js"></script> 
 </body>
 </html>
