--- a/Find a job.html
+++ b/Find a job.html
@@ -29,11 +29,11 @@
             }
             }          
     </style>
-<link rel="stylesheet" href="https://aj1st-files.pages.dev/glowingtitle.css">      
+<link rel="stylesheet" href="https://aj1st.pages.dev/glowingtitle.css">      
 <!--  -->
 </head>
 <body>
-    <script src="https://aj1st-files.pages.dev/header.js"></script> 
+    <script src="https://aj1st.pages.dev/header.js"></script> 
          <div class="body-area">
 <!-- Body Area (for content)**************** -->
 <div id="aj1st">
@@ -91,8 +91,8 @@
         <br><br><br>
        </div>
 <div id="notinuae"></div>
-<script src="https://aj1st-files.pages.dev/notinuae.js"></script>
+<script src="https://aj1st.pages.dev/notinuae.js"></script>
 <!-- 888888888888888888888888888888888888888 -->
-<script src="https://aj1st-files.pages.dev/footer.js"></script> 
+<script src="https://aj1st.pages.dev/footer.js"></script> 
 </body>
 </html>
