Update Start a business.html

--- a/Start a business.html
+++ b/Start a business.html
@@ -29,10 +29,10 @@
             }
             }    
     </style> 
-<link rel="stylesheet" href="https://aj1st-files.pages.dev/glowingtitle.css">      
+<link rel="stylesheet" href="https://aj1st.pages.dev/glowingtitle.css">      
 </head>
 <body>
-<script src="https://aj1st-files.pages.dev/header.js"></script> 
+<script src="https://aj1st.pages.dev/header.js"></script> 
 <!-- Body Area (for content)**************** -->
     <div class="body-area">
 <!--  -->        
@@ -117,7 +117,7 @@
 </div>
 </div>
 <!-- 888888888888888888888888888888888888888 -->    
-<script src="https://aj1st-files.pages.dev/whatsapp.js"></script>
-<script src="https://aj1st-files.pages.dev/footer.js"></script>
+<script src="https://aj1st.pages.dev/whatsapp.js"></script>
+<script src="https://aj1st.pages.dev/footer.js"></script>
 </body>
 </html>
