--- a/Visit uae.html
+++ b/Visit uae.html
@@ -30,11 +30,11 @@
             }
             }   
     </style>
-<link rel="stylesheet" href="https://aj1st-files.pages.dev/glowingtitle.css">      
+<link rel="stylesheet" href="https://aj1st.pages.dev/glowingtitle.css">      
 <!--  -->
 </head>
 <body>
-    <script src="https://aj1st-files.pages.dev/header.js"></script> 
+    <script src="https://aj1st.pages.dev/header.js"></script> 
          <div class="body-area">
 <!-- Body Area (for content)**************** -->
 <div id="aj1st">
@@ -119,9 +119,9 @@
 </div>
 </div>
 <!-- 888888888888888888888888888888888888888 -->    
-<script src="https://aj1st-files.pages.dev/whatsapp.js"></script>
+<script src="https://aj1st.pages.dev/whatsapp.js"></script>
 <footer>
-<script src="https://aj1st-files.pages.dev/footer.js"></script>
+<script src="https://aj1st.pages.dev/footer.js"></script>
 </footer> 
 </body>
 </html>
