--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         }         
     </style>
 <!-- 888888888888888888888888888888888888888 --> 
-    <link rel="stylesheet" href="https://aj1st-files.pages.dev/cover.css">
-    <link rel="stylesheet" href="https://aj1st-files.pages.dev/titleofcover.css">
-    <link rel="stylesheet" href="https://aj1st-files.pages.dev/visit.css">    
-    <link rel="stylesheet" href="https://aj1st-files.pages.dev/slider.css">  
-    <link rel="stylesheet" href="https://aj1st-files.pages.dev/job.css">
+    <link rel="stylesheet" href="https://aj1st.pages.dev/cover.css">
+    <link rel="stylesheet" href="https://aj1st.pages.dev/titleofcover.css">
+    <link rel="stylesheet" href="https://aj1st.pages.dev/visit.css">    
+    <link rel="stylesheet" href="https://aj1st.pages.dev/slider.css">  
+    <link rel="stylesheet" href="https://aj1st.pages.dev/job.css">
 <!-- 888888888888888888888888888888888888888 -->            
 </head>
 <body>
-<script src="https://aj1st-files.pages.dev/header.js"></script>     
+<script src="https://aj1st.pages.dev/header.js"></script>     
 <!-- 888888888888888888888888888888888888888 --> 
     <div class="body-area">
 <!-- 888888888888888888888888888888888888888 --> 
@@ -112,13 +112,13 @@
 </body>
 <!-- 888888888888888888888888888888888888888 --> 
 <div id="business-container"></div>
-<script src="https://aj1st-files.pages.dev/startbusiness.js"></script>
+<script src="https://aj1st.pages.dev/startbusiness.js"></script>
 <!-- 888888888888888888888888888888888888888 --> 
 <div section="links-container"></div>
-<script src="https://aj1st-files.pages.dev/gotolinks.js"></script> 
+<script src="https://aj1st.pages.dev/gotolinks.js"></script> 
 
 <!-- 888888888888888888888888888888888888888 --> 
-<script src="https://aj1st-files.pages.dev/whatsapp.js"></script>
-<script src="https://aj1st-files.pages.dev/footer.js"></script> 
+<script src="https://aj1st.pages.dev/whatsapp.js"></script>
+<script src="https://aj1st.pages.dev/footer.js"></script> 
 </body>
 </html> 
