--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         .popup .content {
             padding: 16px;
         }
+        .popup .apply-link {
+            text-decoration: none;
+            font-weight: bold;
+            color: #009500;
+        }
         .popup .apply {
             position: fixed;
             bottom: 3%;
@@ -243,7 +248,7 @@
         <i class="fa-solid fa-share-from-square share-icon" id="share-button" aria-hidden="true"></i>
     </div>    
 
-<script src="https://vacancies.aj1st.com/jobs5.js"></script>
+<script src="https://vacancies.aj1st.com/job-19-04.js"></script>
 
        <script>
                                        
