--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vacancies in UAE</title> 
+    <title>Vacancies in UAE</title>
+    <!-- Open Graph / Facebook / WhatsApp -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://vacancies.aj1st.com">
+<meta property="og:title" content="Vacancies at AJ1st">
+<meta property="og:description" content="Find job vacancies and career opportunities at AJ1st. Apply now and start your journey.">
+<meta property="og:image" content="https://i.postimg.cc/zfDRzPZr/social.webp">
+    
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"> 
@@ -248,7 +255,7 @@
         <i class="fa-solid fa-share-from-square share-icon" id="share-button" aria-hidden="true"></i>
     </div>    
 
-<script src="https://vacancies.aj1st.com/jobs-April21.js"></script>
+<script src="https://vacancies.aj1st.com/jobs-April22.js"></script>
 
        <script>
                                        
