--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <i class="fa-solid fa-share-from-square share-icon" id="share-button" aria-hidden="true"></i>
     </div>    
 
-<script src="https://vacancies.aj1st.com/jobs-April22.js"></script>
+<script src="https://vacancies.aj1st.com/jobs-April22-2.js"></script>
 
        <script>
                                        
